# Validacion-SAP-TUTATI

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
OUTPUT/: validar_igv_actualizados_20260311.txt
src/sap_report/: __init__.py  logging_config.py  main.py
src/sap_report/application/: __init__.py  report_service.py
src/sap_report/domain/: __init__.py  cuid.py
src/sap_report/infrastructure/: __init__.py  config.py
src/sap_report/infrastructure/db/: __init__.py  repository.py
src/sap_report/infrastructure/db/queries/: SAP.sql  TUTATI.sql  migrar_OC.sql  sap_nc.sql  tutati_nc.sql  validar_articulos.sql  validar_igv_mysql_docs.sql  validar_igv_mysql_items.sql  validar_igv_mysql_pendientes_orders.sql  validar_igv_mysql_pendientes_rmas.sql  validar_igv_sap.sql  validar_igv_sap_items.sql  validar_igv_update_comercial.sql  validar_igv_update_pedral.sql
src/sap_report/infrastructure/export/: __init__.py  excel_writer.py
src/sap_report/ui/: __init__.py  tkinter_app.py
tests/unit/: test_cuid.py
